--- a/styles/weather_cards.css
+++ b/styles/weather_cards.css
@@ -2,15 +2,6 @@
 /*=====================================*/
 
 :root {
-    --body: #1b1b1c;
-
-    --color-primary: #1a73e8;
-    --color-secondary: #ffcc00;
-    --color-background: #f5f5f5;
-    --color-text: #333;
-    --body: #1b1b1c;
-  
-    /* Status */
     --status-bg: #808080;
     --status-color: #FFF;
   
@@ -90,7 +81,7 @@
   body {
     line-height: 1;
     font-family: Lato, sans-serif;
-    background-color: var(--body);
+    background-color: var(--color-background);
     font-size: 100%;
     vertical-align: baseline;
   }
@@ -125,26 +116,9 @@
   .grid-item {
     width: 210px;
     margin: 10px;
-    background-color: #3c3b3d;
+    background-color: var(--color-card-forecast);
     overflow: hidden;
   }
-
-  /* HEADER */
-/* ===================================== */
-
-header {
-    margin: 20px 0;
-  }
-  
-  header h1 {
-    font-weight: 600;
-    font-size: 2rem;
-    color: #000000;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-  }
-  
   
   /* CARD */
   /*=====================================*/
